# Haskell-Programming-Exercises

./: Chapter Exercises.lhs  Exercises: Will They Work?.lhs  README.md
Applicative/: ChapterExercises.hs  Exercises1-2.hs  Exercises3.hs  Identity Instance.hs  stops_vowels.hs
Chapter 1/: chapter_exercises.md  intermission.md
Chapter 10/: Chapter Exercises.hs  Exercises: Database Processing.hs  Exercises: Understanding Folds.lhs  Scans Exercises.lhs
Chapter 11/: BinaryTree.hs  Chapter Exercises.lhs  Exercise: Programmers.lhs  Exercises: Cardinality.lhs  Exercises: Dog Types.lhs  Exercises: For Example.lhs  Exercises: How Does Your Garden Grow?.lhs  Exercises: Logic Goats.hs  Exercises: Pity the Bool.lhs  Exercises: The Quad.lhs  Exercises: Vehicles.lhs  Exponentiation in what order?.lhs  Hutton's Razor.hs  LogicGoats.hs  Phone Exercises.hs  newtype.lhs
Chapter 12/: Bleating either.lhs  Chapter Exersices.lhs
Chapter 13/: Chapter exercises.lhs  Intermission: Check your understanding.lhs  gimmePerson.hs
Chapter 15/: Madness.hs  monoid.hs  semigroup.hs
Chapter 16/: Chapter exercises.hs  Exercise: Possibly.hs  Exercises: Be Kind.lhs  Exercises: Heavy Lifting.hs  Exercises: Instances of Func.hs  ReplaceExperiment.hs  Short Exercise.hs  Wait, how does that even typecheck?.lhs
Chapter 17/: Constant Instance.hs  Exercises1-2.hs  Exercises3.hs  Exercises4.hs  Fixer Upper.hs
Chapter 18/: bind.hs  end_chapter_exercises.hs
Chapter 19/: README
Chapter 2/: Chapter Exercises.hs  Exercises-Parentheses_and_Association.hs  Exercises.hs  (+2 more)
Chapter 24/: ChapterExercises_1.hs  ChapterExercises_2.hs  Fractions.hs  LearnParsers.hs  README.md  UnitOfSuccess.hs  chapter24.cabal  stack.yaml
Chapter 24/src/: ChapterExercises_1.hs  ChapterExercises_10.hs  ChapterExercises_2_3.hs  ChapterExercises_4.hs  ChapterExercises_5.hs  ChapterExercises_6.hs  ChapterExercises_7.hs  ParseTestCaseHelpers.hs
Chapter 24/src/Text/: Fractions.hs
(+154 files in other folders)
